--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -3,6 +3,10 @@
   min-height: 100vh;
   background-color: #000;
 }
+.container {
+  margin: 0 auto;
+  max-width: 1400px;
+}
 .heading {
   font-size: 5rem;
   font-family: var(--font-bold);
