--- a/src/app/components/Header/Header.module.css
+++ b/src/app/components/Header/Header.module.css
@@ -1,13 +1,16 @@
 .header {
-  padding: 1.25rem;
+  padding: 2.5rem 1.25rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 .logo {
-  width: 120px;
+  width: 150px;
 }
 .menu {
   display: flex;
   gap: 20px;
+}
+.phone {
+  height: 1.5rem;
 }
