--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -7,21 +7,43 @@
   margin: 0 auto;
   max-width: 1400px;
 }
-.heading {
-  font-size: 5rem;
-  font-family: var(--font-bold);
-  color: #ffffff;
-  text-align: center;
-  color: white;
-  text-shadow: 3px 3px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000,
-    -1px 1px 0 #000, 1px 1px 0 #000;
-  line-height: 1rem;
-  margin-top: 5rem;
-}
-.heading span {
-  background-color: #9de50f;
-}
 
+.section {
+  padding: 3rem 1.25rem;
+  max-width: 600px;
+}
+.intro {
+  font-size: 2rem;
+}
+.heading {
+  font-size: 4rem;
+  font-family: var(--font-bold);
+  /* color: #ffffff; */
+  /* text-align: center; */
+  /* text-shadow: 3px 3px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000,
+    -1px 1px 0 #000, 1px 1px 0 #000; */
+  /* line-height: 1rem; */
+  line-height: 1.2;
+  background: -webkit-linear-gradient(#eeeeee, #9de50f);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin-bottom: 1rem;
+}
+.heading::selection {
+  color: #fff;
+  -webkit-text-fill-color: #fff;
+}
+.description {
+  font-size: 1.25rem;
+  margin-bottom: 1.5rem;
+}
+.socialIcons {
+  display: flex;
+  gap: 1.2rem;
+}
+.icon {
+  height: 2.5rem;
+}
 @media (max-width: 768px) {
   .heading {
     font-size: 3rem;
